[package]
name = "opcua-core"
version = "0.13.0"                                                           # OPCUARustVersion
description = "OPC UA core utils for client and server"
authors = ["Adam Lock <locka99@gmail.com>", "Einar Omang <einar@omang.com>"]
homepage = "https://github.com/freeopcua/rust-opcua"
repository = "https://github.com/freeopcua/rust-opcua"
license = "MPL-2.0"
keywords = ["opcua", "opc", "ua"]
categories = ["embedded", "network-programming"]
readme = "../README.md"
documentation = "https://docs.rs/opcua/"
edition = "2021"

[lib]
name = "opcua_core"

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }

opcua-types = { path = "../opcua-types" }
opcua-crypto = { path = "../opcua-crypto" }
thiserror = { workspace = true }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
