[package]
name = "opcua-macros"
version = "0.1.0"
description = "OPC UA support proc macros"
authors = ["Einar Omang <einar@omang.com>"]
homepage = "https://github.com/locka99/opcua"
repository = "https://github.com/locka99/opcua"
license = "MPL-2.0"
keywords = ["opcua","opc","ua"]
categories = ["embedded","network-programming"]
readme = "../README.md"
documentation = "https://docs.rs/opcua/"
edition = "2021"

[features]
json = []
xml = []

[lib]
name = "opcua_macros"

proc-macro = true

[dependencies]
base64 = "0.22.1"
convert_case = "0.6.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.72", features = ["full"] }
uuid = "1.10.0"
