[package]
name = "opcua-nodes"
version = "0.13.0" # OPCUARustVersion
description = "OPC UA node representation and import framework"
authors = ["Adam Lock <locka99@gmail.com>", "Einar Omang <einar@omang.com>"]
homepage = "https://github.com/locka99/opcua"
repository = "https://github.com/locka99/opcua"
license = "MPL-2.0"
keywords = ["opcua","opc","ua"]
categories = ["embedded","network-programming"]
readme = "../README.md"
documentation = "https://docs.rs/opcua/"
edition = "2021"

[lib]
name = "opcua_nodes"

[features]
xml = ["opcua-types/xml", "opcua-xml"]

[dependencies]
bitflags = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

opcua-types = { path = "../opcua-types" }
opcua-macros = { path = "../opcua-macros" }
opcua-xml = { path = "../opcua-xml", optional = true }


[dev-dependencies]
opcua-nodes = { path = ".", features = ["xml"] }