[package]
name = "opcua-types"
version = "0.13.0" # OPCUARustVersion
description = "OPC UA data types"
authors = ["Adam Lock <locka99@gmail.com>", "Einar Omang <einar@omang.com>"]
homepage = "https://github.com/locka99/opcua"
repository = "https://github.com/locka99/opcua"
license = "MPL-2.0"
keywords = ["opcua","opc","ua"]
categories = ["embedded","network-programming"]
readme = "../README.md"
documentation = "https://docs.rs/opcua/"
edition = "2021"

[features]
json = ["serde", "serde_json", "serde_with"]

[lib]
name = "opcua_types"

[dependencies]
bitflags = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
byteorder = { workspace = true }
base64 = { workspace = true }

serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
