[package]
name = "opcua-types"
version = "0.13.0" # OPCUARustVersion
description = "OPC UA data types"
authors = ["Adam Lock <locka99@gmail.com>", "Einar Omang <einar@omang.com>"]
homepage = "https://github.com/locka99/opcua"
repository = "https://github.com/locka99/opcua"
license = "MPL-2.0"
keywords = ["opcua","opc","ua"]
categories = ["embedded","network-programming"]
readme = "../README.md"
documentation = "https://docs.rs/opcua/"
edition = "2021"

[features]
json = ["struson", "opcua-macros", "opcua-macros/json"]
xml = ["opcua-xml", "opcua-macros", "opcua-macros/xml"]

[lib]
name = "opcua_types"

[dependencies]
bitflags = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
hashbrown = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
byteorder = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }

struson = { workspace = true, optional = true }

opcua-xml = { path = "../opcua-xml", optional = true }
opcua-macros = { path = "../opcua-macros", optional = true }


[dev-dependencies]
opcua-types = { path = ".", features = ["xml", "json"] }
serde_json = { workspace = true }
