[package]
name = "opcua-types"
version = "0.13.0"
description = "OPC UA data types"
authors = ["Adam Lock <locka99@gmail.com>", "Einar Omang <einar@omang.com>"]
homepage = "https://github.com/freeopcua/rust-opcua"
repository = "https://github.com/freeopcua/rust-opcua"
license = "MPL-2.0"
keywords = ["opcua", "opc", "ua"]
categories = ["embedded", "network-programming"]
readme = "../README.md"
documentation = "https://docs.rs/opcua/"
edition = "2021"

[features]
json = ["struson", "opcua-macros/json"]
xml = ["opcua-xml", "opcua-macros/xml"]

[lib]
name = "opcua_types"

[dependencies]
bitflags = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
hashbrown = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
byteorder = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
opcua-macros = { path = "../opcua-macros" }

struson = { workspace = true, optional = true }

opcua-xml = { path = "../opcua-xml", optional = true }

[dev-dependencies]
opcua-types = { path = ".", features = ["xml", "json"] }
serde_json = { workspace = true }
