[package]
name = "opcua-xml"
version = "0.1.0"
edition = "2021"
description = "OPC UA XML loading library"
authors = ["Einar Omang <einar@omang.com>"]
homepage = "https://github.com/locka99/opcua"
repository = "https://github.com/locka99/opcua"
license = "MPL-2.0"
keywords = ["opcua","opc","ua"]
readme = "../README.md"
documentation = "https://docs.rs/opcua/"

[dependencies]
roxmltree = "0.20.0"
thiserror = "1.0.63"