[package]
name = "custom-codegen"
version = "0.1.0"
edition = "2021"

[features]
xml = ["opcua/xml"]
json = ["serde_json", "serde", "serde_with", "opcua/json"]

default = ["xml", "json"]

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }

[dependencies.opcua]
path = "../../lib"
features = ["client", "console-logging"]
