[package]
name = "opcua-structure-client"
version = "0.13.0"                    # OPCUARustVersion
authors = ["Rust-OpcUa contributors"]
edition = "2021"

[dependencies]
pico-args = "0.5"
tokio = { version = "1.36.0", features = ["full"] }
log = { workspace = true }

[dependencies.async-opcua]
path = "../../async-opcua"
version = "0.14.0"                       # OPCUARustVersion
features = ["client", "console-logging"]
default-features = false

[features]
default = ["json", "xml"]
json = ["async-opcua/json"]
xml = ["async-opcua/xml"]
