[package]
name = "opcua-demo-server"
version = "0.13.0"
authors = ["Adam Lock <locka99@gmail.com>"]
edition = "2021"

[dependencies]
chrono = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
log4rs = "1.2"
pico-args = "0.5"
tokio = { workspace = true }
tokio-util = { workspace = true }

[dependencies.opcua]
path = "../../lib"
features = ["all"]

[features]
default = ["json", "xml"]
json = ["opcua/json"]
xml = ["opcua/xml"]
