[package]
name = "opcua-simple-client"
version = "0.13.0" # OPCUARustVersion
authors = ["Adam Lock <locka99@gmail.com>"]
edition = "2021"

[dependencies]
pico-args = "0.5"
tokio = { version = "1.36.0", features = ["full"] }
log = { workspace = true }

[dependencies.opcua]
path = "../../lib"
version = "0.13.0" # OPCUARustVersion
features = ["client", "console-logging"]
default-features = false
