[package]
name = "opcua-simple-server"
version = "0.13.0"
authors = ["Adam Lock <locka99@gmail.com>"]
edition = "2021"

[dependencies]
chrono = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

[dependencies.opcua]
path = "../../lib"
features = ["server", "console-logging"]
default-features = false
