[package]
name = "async-opcua-simple-server"
version = "0.13.0"
authors = ["Adam Lock <locka99@gmail.com>"]
edition = "2021"

[dependencies]
chrono = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

[dependencies.async-opcua]
path = "../../async-opcua"
features = ["server", "console-logging"]
default-features = false
